--- a/ARKitConvenienceStoreSearch/Base.lproj/Main.storyboard
+++ b/ARKitConvenienceStoreSearch/Base.lproj/Main.storyboard
@@ -134,9 +134,11 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="er8-3j-Mhd" id="evh-WF-oc5"/>
+                        <segue destination="3L0-ap-4KZ" kind="unwind" identifier="selectedSearchKeySegue" unwindAction="selectedSearchKeyWithSegue:" id="qjV-YO-GTr"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RJZ-L2-Mf9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="3L0-ap-4KZ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="904.79999999999995" y="-218.1409295352324"/>
         </scene>
